--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 .venv
-./*/__pycache__
-./classic_transformer/opus_books_weights
-./classic_transformer/
+*/__pycache__
+classic_transformer/opus_books_weights
 
-./data/GCF_000195955.2_ASM19595v2_genomic.gtf
-./data/sample_*.gff
-./data/sample_*.txt
-./data/sample_*.json
+data/GCF_000195955.2_ASM19595v2_genomic.gtf
+data/sample_*.gff
+data/sample_*.txt
+data/sample_*.json
+
+genome_seqs.bak
